--- a/cowsayApp/templates/index.html
+++ b/cowsayApp/templates/index.html
@@ -1,1 +1,13 @@
-<h1>Recipes</h1>
+
+
+<form action="" method="post">
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Submit">
+</form>
+<br>
+<pre>
+    {{cow}}
+</pre>
+
+<a href='history'>history</a>
